fixed scrollbar issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,7 @@
 html
 {
     font-size: 10px;
+    overflow-y: scroll;
 }
 
 body
